--- a/welcome/templates/welcome/index.html
+++ b/welcome/templates/welcome/index.html
@@ -212,7 +212,7 @@ pre {
 
 <section class='container'>
           <hgroup>
-            <h1>Welcome to your Django application on OpenShift</h1>
+            <h1>I Totally Know How To Write A Python App, It's So Easy.</h1>
           </hgroup>
 
 
@@ -229,8 +229,9 @@ pre {
                 </p>
 
 <ol>
+  <li>These aren't updated for 4 yet</li>
   <li>From the Web Console homepage, navigate to your project</li>
-  <li>Click on Browse &gt; Builds</li>
+  <li>Click on BuildConfig</li>
   <li>Click the link with your BuildConfig name</li>
   <li>Click the Configuration tab</li>
   <li>Click the "Copy to clipboard" icon to the right of the "GitHub webhook URL" field</li>
